(CLIENT), adding notistack, nprogress, finishing auth integration

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,6 +8,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  #nprogress {
+    z-index: 999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    .bar {
+      background-color: $primaryColor;
+      height: 5px;
+    }
+  }
 }
 html {
   scroll-behavior: smooth;
