(CLIENT) adding project statistics in a chart, adding bugs in table, (SERVER) sorting timeline from the server

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -99,3 +99,17 @@ button{
 .secondary {
   color: grey;
 }
+
+#Dchart {
+  width: 100% !important;
+}
+
+// .grandparent {
+//   width: 100%
+// }
+// .parent {
+//   width: 100%
+// }
+// .tableContainer {
+//   width: 100%
+// }
