--- a/client/src/components/ProjectBox/ProjectBox.scss
+++ b/client/src/components/ProjectBox/ProjectBox.scss
@@ -1,5 +1,5 @@
 .ProjectBox {
-  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  // background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
   text-align: center;
   width: 100% !important;
   min-height: 150px !important;
