--- a/client/src/containers/ProjectDetails/ProjectDetails.scss
+++ b/client/src/containers/ProjectDetails/ProjectDetails.scss
@@ -3,3 +3,22 @@
     margin-top: 20px;
   }
 }
+
+
+#ProjectIntro{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  padding: 10px;
+  h2#ownerH2 {
+    text-transform: capitalize;
+  }
+}
+
+
+@media only screen and (max-width: 800px) {
+  #ProjectIntro{
+    display: block;
+  }
+  }
+
