--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -104,12 +104,10 @@ button{
   width: 100% !important;
 }
 
-// .grandparent {
-//   width: 100%
-// }
-// .parent {
-//   width: 100%
-// }
-// .tableContainer {
-//   width: 100%
-// }
+
+@media only screen and (max-width: 800px) {
+  h2 {
+    font-size: 1rem;
+  }
+}
+
