(CLIENT) adding teamStatistics & teamProjects... (SERVER) edit the format of team statistics

--- a/client/src/containers/ProjectDetails/ProjectDetails.scss
+++ b/client/src/containers/ProjectDetails/ProjectDetails.scss
@@ -8,6 +8,7 @@
 #ProjectIntro{
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 20px;
   padding: 10px;
   h2#ownerH2 {
