--- a/client/src/components/Boxes/Box.scss
+++ b/client/src/components/Boxes/Box.scss
@@ -1,5 +1,4 @@
-.ProjectBox {
-  // background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+.Box {
   text-align: center;
   width: 100% !important;
   min-height: 150px !important;
@@ -17,4 +16,9 @@
     top: 5%;
     right: 5%;
   }
+}
+
+.teamBox {
+  background-color: #11161A !important;
+  color: white !important;
 }
