--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,7 +8,7 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   scroll-behavior: smooth;
   height: 100%;
   #nprogress {
@@ -25,7 +25,7 @@ body {
 }
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   height: 100%;
 
 }
