--- a/client/src/components/OuterNav/OuterNav.scss
+++ b/client/src/components/OuterNav/OuterNav.scss
@@ -6,6 +6,11 @@
     margin: 0;
     z-index: 999999999999999999999999999;
     box-shadow: 0px 10px 10px black(14, 14, 14);
+    background-color: #11161A;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
     li {
       list-style: none;
       cursor: pointer;
@@ -20,8 +25,8 @@
         text-decoration: none;
         width: 100%;
         height: 100%;
-        color: black;
         display: block;
+        color: $primaryColor;
       }
     }
   }
