--- a/client/src/components/Boxes/Box.scss
+++ b/client/src/components/Boxes/Box.scss
@@ -1,11 +1,11 @@
 .Box {
   text-align: center;
   width: 100% !important;
-  min-height: 150px !important;
+  min-height: 200px !important;
   padding: 10px;
   transition: .3s ease-out !important;
   position: relative;
-  cursor: pointer;
+
   &:hover {
     box-shadow: 0px 4px 5px rgb(136, 136, 136) !important;
     transform: translateY(-5px);
@@ -15,6 +15,14 @@
     position: absolute;
     top: 5%;
     right: 5%;
+  }
+
+  .controllers {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  
   }
 }
 
