--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -1,8 +1,8 @@
 @import '../../../variables.scss';
 
 #authPage {
-  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    height: 100vh;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);    height: 100vh;
   padding-top: 60px;
 
   #authForm {
