--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -2,7 +2,8 @@
 
 #authPage {
   background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);    height: 100vh;
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);   
+   min-height: 100vh;
   padding-top: 60px;
 
   #authForm {
