(CLIENT) Editing modal width, changing sign in button name, adding margin to teamNotfications paper

--- a/client/src/containers/Teams/Teams.scss
+++ b/client/src/containers/Teams/Teams.scss
@@ -23,6 +23,12 @@
       opacity: .8;
     }
   }
+
+
+  #teamNotificationPaper {
+    margin: 50px !important;
+
+  }
 }
 
 #teamIntro {
@@ -52,3 +58,4 @@
   }
 
 }
+
