--- a/client/src/containers/Teams/Teams.scss
+++ b/client/src/containers/Teams/Teams.scss
@@ -59,3 +59,22 @@
 
 }
 
+@media only screen and (max-width: 700px) {
+  #addMembers {
+    display: block;
+  
+    height: 100%;
+    .membersListSection {
+      width: 100%;
+      // height: 100%;
+      border-right: 0;
+      padding: 5px;
+    }
+    .findSection {
+      width: 100%;
+      // height: 100%;
+      padding: 5px;
+    }
+  
+  }
+  }
