(Client&Server) adding authentication with google, implemented the button design, its functionality, created the ackend api, integrated with google oauth2

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -12,6 +12,16 @@
     margin-top: 50px;
     text-align: center;
     width: 80%;
+
+    #google-btn {
+      background-color: #03A9F4 !important; 
+      // display: block;
+      margin: 15px auto;
+      border-radius: 2px !important;
+      &:hover {
+        background-color: #0288D1 !important;
+      }
+    }
   }
 }
 
